Fix a iOS layout issue

--- a/source/stylesheets/site.css.sass
+++ b/source/stylesheets/site.css.sass
@@ -35,3 +35,6 @@ img.avatar
 
 @media print, screen and (max-width: 720px)
 @media print, screen and (max-width: 480px)
+  img.avatar
+    width: 50%
+    bottom: 20px
